@@ -1,27 +1,27 @@
 package com.jakub.bone.domain.plane;
 
-import com.jakub.bone.domain.airport.Location;
-
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Random;
-import java.util.stream.Collectors;
-
+import com.jakub.bone.domain.airport.Coordinates;
 import com.jakub.bone.utils.WaypointGenerator;
 import lombok.Getter;
 import lombok.Setter;
 import lombok.extern.log4j.Log4j2;
 
-import static com.jakub.bone.config.Constant.*;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Random;
+
+import static com.jakub.bone.config.Constant.MAX_ALTITUDE;
+import static com.jakub.bone.config.Constant.MIN_ALTITUDE;
+import static com.jakub.bone.config.Constant.UPDATE_DELAY;
 
 @Getter
 @Setter
 @Log4j2
 public class Navigator {
-    private List<Location> waypoints;
+    private List<Coordinates> waypoints;
     private FuelManager fuelManager;
     private int currentIndex;
-    private Location location;
+    private Coordinates coordinates;
     private boolean isFirstMove;
 
     public Navigator(FuelManager fuelManager) {
@@ -39,12 +39,12 @@ public class Navigator {
         fuelManager.burnFuel();
     }
 
-    public boolean isAtLastWaypoint(){
+    public boolean isAtLastWaypoint() {
         return currentIndex == waypoints.size();
     }
 
-    public void updateLocation(Location location) {
-        if(!isFirstMove){
+    public void updateLocation(Coordinates coordinates) {
+        if (!isFirstMove) {
             try {
                 Thread.sleep(UPDATE_DELAY);
             } catch (InterruptedException ex) {
@@ -53,22 +53,21 @@ public class Navigator {
             }
         }
         this.isFirstMove = false;
-        this.location = location;
+        this.coordinates = coordinates;
     }
 
     private void spawnPlane() {
-        List<Location> waypointsToSpawn = waypoints.stream()
+        List<Coordinates> waypointsToSpawn = waypoints.stream()
                 .filter(wp -> wp.getAltitude() >= MIN_ALTITUDE && wp.getAltitude() <= MAX_ALTITUDE)
-                .collect(Collectors.toList());
+                .toList();
 
         Random random = new Random();
         this.currentIndex = random.nextInt(waypointsToSpawn.size());
-        Location initialWaypoint = waypointsToSpawn.get(currentIndex);
-        this.location = initialWaypoint;
+        this.coordinates = waypointsToSpawn.get(currentIndex);
     }
 
-    public List <Location> getRiskZoneWaypoints() {
-        List<Location> nearWaypoints = new ArrayList<>();
+    public List<Coordinates> getRiskZoneWaypoints() {
+        List<Coordinates> nearWaypoints = new ArrayList<>();
         for (int offset = -3; offset <= 3; offset++) {
             int index = currentIndex + offset;
             if (index > 0 && index <= waypoints.size()) {
